<resources>
    <string name="app_name">TestingAndroid</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="Courze">Courze</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="register">Register</string>
    <string name="et_username">Username</string>
    <string name="et_confirm_password">Konfirmasi Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
</resources>