<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:orientation="vertical">
    <TextView android:id="@+id/courze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:textSize="43sp"
        android:textAppearance="@style/courze_"
        android:text="@string/Courze"
        >
    </TextView>
    <EditText android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_textbox"
        android:paddingLeft="20dp"
        android:textAppearance="@style/username_"
        android:hint="@string/username"
        >
    </EditText>
    <EditText android:id="@+id/password_toggle"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:background="@drawable/custom_textbox"
        android:paddingLeft="20dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
        android:paddingRight="20dp"
        android:textAppearance="@style/username_"
        android:hint="@string/password"
        >
    </EditText>

    <Button android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textAppearance="@style/login_"
        >
    </Button>
</LinearLayout>