<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:paddingTop="142dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/courze"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Courze"
        android:textAppearance="@style/courze_"
        android:textSize="43sp"
        />

    <EditText
        android:id="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/courze"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_textbox"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:paddingLeft="20dp"
        android:textAppearance="@style/username_"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_textbox"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAppearance="@style/username_"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/tv_lupa_password"
        app:layout_constraintTop_toBottomOf="@id/password_toggle"
        app:layout_constraintEnd_toEndOf="@id/password_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupa_password"
        android:textAppearance="@style/tv_lupa_password_"
        android:layout_marginTop="16dp"
        />
    <Button
        android:id="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/tv_lupa_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_bg_btn_login"
        android:text="@string/login"
        android:textAppearance="@style/login_"
        android:layout_marginTop="24dp"
        />

    <TextView
        android:id="@+id/tv_belum_punya_akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/belum_punya_akun"
        android:textAppearance="@style/belum_punya_akun_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textAppearance="@style/tv_register_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toEndOf="@+id/tv_belum_punya_akun"
        app:layout_constraintTop_toBottomOf="@+id/login" />
</androidx.constraintlayout.widget.ConstraintLayout>